# Business-Sales-profit-Analyzer

./: .gitignore  README.md  app.py  requirements.txt  smoke_test.py
backend/: .env.example  README.md  __init__.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  crud.py  main.py  models.py  schemas.py  security.py
backend/app/api/: accountant.py  analytics.py  auth.py  businesses.py  chat.py  deps.py  inventory.py  ml.py  reports.py  staff.py  summary.py  transactions.py  users.py
backend/app/core/: config.py
backend/app/data/: retail_dataset_last_year_realistic.csv
backend/app/db/: session.py
backend/app/scripts/: fix_old_expense_categories.py  import_dataset.py
backend/ml/: README.md  __init__.py  data_loader.py  ml_config.py  model_store.py  train_once.py  train_profit_model.py
backend/ml/models/: profit_model_business_3_meta.json
backend/scripts/: check_analytics.py  check_password_hash.py  check_postgres_direct.py  check_routes.py  db_check.py  kill_uvicorn.ps1  list_businesses.py  list_users.py  query_users.py  register_and_check_postgres.py  register_harshitha.py  smoke_test.py  start_uvicorn_with_env.py  test_create_user.py
backend/sql/: create_ml_view.sql  create_tables.sql
backend/tests/: test_rbac.py
docs/: SETUP.md
frontend/: .env.production  README.md  index.html  package.json  tailwind.config.cjs
frontend/src/: App.jsx  auth.css  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: AnalyticsCharts.jsx  PrivateRoute.jsx  Sidebar.jsx  Topbar.jsx  TransactionModal.jsx
(+14 files in other folders)
