[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pandas",
  "scikit-learn",
  "joblib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
